Changes during meeting

--- a/elderly-n.html
+++ b/elderly-n.html
@@ -184,8 +184,8 @@
                   <div class="p-8 flex flex-col items-center">
                       <!-- Price section with strikethrough -->
                       <div class="text-center mb-4">
-                          <span class="text-gray-500 text-xl font-normal line-through mr-2">₹ 5,000</span>
-                          <span class="text-4xl font-bold">₹ 3,999<sup>*</sup></span>
+                          <span class="text-gray-500 text-xl font-normal line-through mr-2">₹ 4,000</span>
+                          <span class="text-4xl font-bold">₹ 3,799<sup>*</sup></span>
                       </div>
                       
                       <p class="text-gray-600 text-sm mb-6 text-left">
@@ -205,7 +205,7 @@
                               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="text-green-500 mr-2 flex-shrink-0" viewBox="0 0 16 16">
                                   <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"/>
                               </svg>
-                              Personalized Diet Plan
+                              personalised Diet Plan
                           </li>
                           <li class="flex items-center text-gray-700">
                               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="text-green-500 mr-2 flex-shrink-0" viewBox="0 0 16 16">
@@ -245,8 +245,8 @@
                   <div class="p-8 flex flex-col items-center">
                       <!-- Price section with strikethrough -->
                       <div class="text-center mb-4">
-                          <span class="text-gray-500 text-xl font-normal line-through mr-2">₹ 10,999</span>
-                          <span class="text-4xl font-bold">₹ 5,999<sup>*</sup></span>
+                          <span class="text-gray-500 text-xl font-normal line-through mr-2">₹ 5,000</span>
+                          <span class="text-4xl font-bold">₹ 4,799<sup>*</sup></span>
                       </div>
                       
                       <p class="text-gray-600 text-sm mb-6 text-left">
@@ -266,7 +266,7 @@
                               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="text-green-500 mr-2 flex-shrink-0" viewBox="0 0 16 16">
                                   <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"/>
                               </svg>
-                              Personalized Diet Plan
+                              personalised Diet Plan
                           </li>
                           <li class="flex items-center text-gray-700">
                               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="text-green-500 mr-2 flex-shrink-0" viewBox="0 0 16 16">
@@ -316,8 +316,8 @@
     <div class="col-lg-3 col-md-6 footer-about">
       <h4>Contact Us</h4>
       <div class="footer-contact">
-        <p>Available 09 AM to 09 PM IST</p>
-        <p><strong>Phone 01:</strong> <span>+91 80766 42570</span></p>
+        <p>Available from 09 AM to 09 PM IST</p>
+        <p><strong>Phone:</strong> <span>+91 80766 42570</span></p>
 
         <p><strong>Email:</strong> <span>info@dietance.com</span></p>
       </div>
