--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
               </script>
               <div class="swiper-wrapper">
 
-<div class="swiper-slide">
+<!-- <div class="swiper-slide">
 <div class="testimonial-item">
 <div class="d-flex">
 <div>
@@ -307,7 +307,136 @@
 <i class="bi bi-quote quote-icon-right"></i>
 </p>
 </div>
+</div> -->
+
+<div class="swiper-slide">
+<div class="testimonial-item">
+<div class="d-flex">
+<div>
+<h3>S K SAHU</h3>
 </div>
+</div>
+<p>
+<i class="bi bi-quote quote-icon-left"></i>
+<span>It was beyond my imagination to reduce HBA1C to come down to 8.5 from 10.5 just in 2 months only with diet schedule followed. Happened only due to sincere effort pushed by my health coach Subhangi Sharma.
+</span>
+<i class="bi bi-quote quote-icon-right"></i>
+</p>
+</div>
+</div>
+
+<div class="swiper-slide">
+<div class="testimonial-item">
+<div class="d-flex">
+<div>
+<h3>Tanaj</h3>
+</div>
+</div>
+<p>
+<i class="bi bi-quote quote-icon-left"></i>
+<span>My experience with Shubhangi Sharma is amezing. When I joined Breathe Well Being my hba1c was 9.6 and now within three months it has reduced to 5.8 75% of my medication is reduced too... I'm very thankful to my health coach Shubhangi Sharma mam And Fitness coach Akash Dev sir and Dr sneha mam for their proper guidance, they've guided me very well. Looking forward for my diabetes reversal
+</span>
+<i class="bi bi-quote quote-icon-right"></i>
+</p>
+</div>
+</div>
+
+<div class="swiper-slide">
+<div class="testimonial-item">
+<div class="d-flex">
+<div>
+<h3>Javed khan</h3>
+</div>
+</div>
+<p>
+<i class="bi bi-quote quote-icon-left"></i>
+<span>"Just had a dinner that worked wonders for my blood sugar! My reading is 101, right on target. It's all about making mindful choices. Thanks to my coach Shubhangi Sharma/
+</span>
+<i class="bi bi-quote quote-icon-right"></i>
+</p>
+</div>
+</div>
+
+<div class="swiper-slide">
+<div class="testimonial-item">
+<div class="d-flex">
+<div>
+<h3>Dr Himani</h3>
+</div>
+</div>
+<p>
+<i class="bi bi-quote quote-icon-left"></i>
+<span>Dear Shubhangi Mam, I'm overwhelmed with gratitude for the incredible care and support you've provided me on my health journey. Your expertise, compassion, and encouragement have made a profound impact on my life. Thank you for believing in me and helping me achieve my goals. Your dedication to your patients is truly inspiring, and I feel fortunate to have you as my diet doctor. Please keep making a difference in the lives of others – you're making a significant impact in mine! Sincerely, Dr Himani
+</span>
+<i class="bi bi-quote quote-icon-right"></i>
+</p>
+</div>
+</div>
+
+<div class="swiper-slide">
+<div class="testimonial-item">
+<div class="d-flex">
+<div>
+<h3>Karan</h3>
+</div>
+</div>
+<p>
+<i class="bi bi-quote quote-icon-left"></i>
+<span>Dear Dr. Shubhangi, I'm beyond grateful for the transformative journey we've embarked on together! Losing 15 kgs wasn't just about the number on the scale – it was about gaining confidence, energy, and a new lease on life. Your guidance, expertise, and unwavering support have been instrumental in my success. Thank you for being an exceptional diet doctor who not only cares about your patients' physical health but also their emotional well-being. Your dedication and passion inspire me to maintain this healthy lifestyle. I'm forever thankful for your support and expertise! Regards Karan
+</span>
+<i class="bi bi-quote quote-icon-right"></i>
+</p>
+</div>
+</div>
+
+<div class="swiper-slide">
+<div class="testimonial-item">
+<div class="d-flex">
+<div>
+<h3>Mr. Khan</h3>
+</div>
+</div>
+<p>
+<i class="bi bi-quote quote-icon-left"></i>
+<span>I started with 12.9 HbA1c and 3 pills. With Shubhangi’s guidance for almost a year, I’m now at 6.9, just 1 pill, and living a healthier lifestyle. Truly grateful to her for this journey 🙏
+</span>
+<i class="bi bi-quote quote-icon-right"></i>
+</p>
+</div>
+</div>
+
+<div class="swiper-slide">
+<div class="testimonial-item">
+<div class="d-flex">
+<div>
+<h3>Syed</h3>
+</div>
+</div>
+<p>
+<i class="bi bi-quote quote-icon-left"></i>
+<span>Dear Ms shubhangi, Good Day. I, sincerely thank you for your counseling and continued support. Your guidance, encouragement, your efforts to make a real difference in my health journey. I truly appreciate the way you patiently explain everything, always keeping my well-being in mind. Thank you once again for being such a wonderful support. Warm regards, Syed
+</span>
+<i class="bi bi-quote quote-icon-right"></i>
+</p>
+</div>
+</div>
+
+<div class="swiper-slide">
+<div class="testimonial-item">
+<div class="d-flex">
+<div>
+<h3>Kartikeswar</h3>
+</div>
+</div>
+<p>
+<i class="bi bi-quote quote-icon-left"></i>
+<span>Good evening Shubhangi madam. As a health coach u did a lot for me. In this journey I met with more then 5 health coach/ dieticians but among all your guidance is some thing different than the others which I like the most. You guided me a lot in all aspects of healthy life not only in my lifestyle disorders. I improved my health condition far better during your guidance. I am so greatful to God that he sent an angel like you for people like us 🙏🏻 Thank you madam 🙏🏻 But afterall I can say this proudly you are one of the best coach which I can say to others. Regards Kartikeswar
+</span>
+<i class="bi bi-quote quote-icon-right"></i>
+</p>
+</div>
+</div>
+
 
               </div>
               <div class="swiper-pagination"></div>
@@ -342,7 +471,7 @@
                 <span>Dietitian</span>
                 <p>
                 M.Sc. Dietetics and Food & Nutrition, B.Sc., I.Y.C.F & C.D.E<br><br>
-                As a cofounder of Dietance and a clinical dietitian, she's passionate about helping you hit your unique health goals. She's all about ditching the quick fixes and using personalized, evidence-based nutrition to build lasting habits that empower you to feel your best.
+                As a cofounder of Dietance and a clinical dietitian, she's passionate about helping you hit your unique health goals. She's all about ditching the quick fixes and using personalised, evidence-based nutrition to build lasting habits that empower you to feel your best.
                 </p>
                 <div class="social">
                   <a href=""><i class="bi bi-instagram"></i></a>
@@ -486,8 +615,8 @@
     <div class="col-lg-3 col-md-6 footer-about">
       <h4>Contact Us</h4>
       <div class="footer-contact">
-        <p>Available 09 AM to 09 PM IST</p>
-        <p><strong>Phone 01:</strong> <span>+91 80766 42570</span></p>
+        <p>Available from 09 AM to 09 PM IST</p>
+        <p><strong>Phone:</strong> <span>+91 80766 42570</span></p>
 
         <p><strong>Email:</strong> <span>info@dietance.com</span></p>
       </div>
