--- a/lifestyle-mgmt-form-www.html
+++ b/lifestyle-mgmt-form-www.html
@@ -50,9 +50,9 @@
                     <label for="plan" class="form-label">Select a Plan</label>
                     <select class="form-select" id="plan" name="plan" required>
                         <option selected disabled value="">Choose...</option>
-                        <option value="01 Month INR 3,999">01 Month INR 3,999</option>
-                        <option value="03 Months INR 9,999">03 Months INR 9,999</option>
-                        <option value="06 Months INR 14,999">06 Months INR 14,999</option>
+                        <option value="LFSTYL INT 01 Month">01 Month INR 5,799</option>
+                        <option value="LFSTYL INT 03 Months">03 Months INR 10,799</option>
+                        <option value="LFSTYL INT 06 Months">06 Months INR 14,799</option>
                     </select>
                 </div>
 
