--- a/about.html
+++ b/about.html
@@ -145,7 +145,7 @@
                 <div class="col-xl-4 d-flex align-items-stretch">
                   <div class="icon-box" data-aos="zoom-out" data-aos-delay="300">
                     <i class="bi bi-person-lines-fill"></i>
-                    <h4>Personalized Care</h4>
+                    <h4>personalised Care</h4>
                     <p>No two people are the same, and neither are their nutrition needs. We create a meal plan based on your preferences, lifestyle, and health goals.</p>
                   </div>
                 </div><!-- End Icon Box -->
@@ -190,9 +190,9 @@
           <div class="col-lg-6 content" data-aos="fade-up" data-aos-delay="100">
             <h3>About Us</h3>
             <p>
-              We founded this company out of a deep passion for the healing power of food. Our goal is to guide and support you on your journey to a healthier lifestyle through balanced, personalized nutrition.<br>
+              We founded this company out of a deep passion for the healing power of food. Our goal is to guide and support you on your journey to a healthier lifestyle through balanced, personalised nutrition.<br>
               <br>We've worked with over 2000 clients worldwide, using a clinical approach to improve lifestyle and manage related disorders like high cholesterol, diabetes, hypertension, thyroid issues, fatty liver, PCOD and more<br>
-              <br>We believe true transformation happens when we work together. By combining our clinical expertise with your unique goals, we create a personalized roadmap to success. 
+              <br>We believe true transformation happens when we work together. By combining our clinical expertise with your unique goals, we create a personalised roadmap to success. 
               Your journey is our priority, and we’re here to support you every step of the way with professional guidance and genuine care.<br>
               <br>We are firmly against fad diets and starvation tactics. Instead, we promote sustainable habits rooted in traditional and local foods. We look forward to partnering with you to help you achieve your goals.
           </div>
@@ -219,7 +219,7 @@
               <a href="kids-n.html" class="stretched-link">
                 <h3>Vision</h3>
               </a>
-              <p>To advance the field of dietetics and reduce malnutrition by providing accessible, personalized nutritional science.</p>
+              <p>To advance the field of dietetics and reduce malnutrition by providing accessible, personalised nutritional science.</p>
             </div>
           </div><div class="col-lg-3 col-md-6" data-aos="fade-up" data-aos-delay="200">
             <div class="service-item position-relative">
@@ -250,7 +250,7 @@
               <a href="sports-n.html" class="stretched-link">
                 <h3>Goals</h3>
               </a>
-              <p>To empower clients with personalized plans, improve public health through effective nutrition programs, and advocate for policies that support nutrition security and sustainable food systems.</p>            
+              <p>To empower People with personalised plans, improve public health through effective nutrition programs, and advocate for policies that support nutrition security and sustainable food systems.</p>            
             </div>
 
       </div>
@@ -274,7 +274,7 @@
     <div class="col-lg-3 col-md-6 footer-about">
       <h4>Contact Us</h4>
       <div class="footer-contact">
-        <p>Available 09 AM to 09 PM IST</p>
+        <p>Available from 09 AM to 09 PM IST</p>
         <p><strong>Phone</strong> <span>+91 80766 42570</span></p>
         <p><strong>Email:</strong> <span>info@dietance.com</span></p>
       </div>
