Required changes were made

--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
                 <li><a href="women-n.html">Women Nutrition</a></li>
                 <li><a href="elderly-n.html">Elderly Nutrition</a></li>                
                 <li><a href="lifestyle-mgmt.html">Lifestyle Management</a></li>
+                <li><a href="diabetes-mgmt.html">Diabetes Management</a></li>
               </ul>
             </li>
 
@@ -245,10 +246,10 @@
               <div class="icon">
                 <i class="bi-calendar-check-fill"></i>
               </div>
-              <a href="contact.html" class="stretched-link">
-                <h3>Make an Appointment</h3>
+              <a href="diabetes-mgmt.html" class="stretched-link">
+                <h3>Diabetes management</h3>
               </a>
-              <p>Ready to connect and explore how personalised nutrition can help you thrive? Let's start your journey to lasting wellness today.</p>            
+              <p>Empower yourself with a personalized approach to managing diabetes. Our nutrition plans are designed to help you effectively control blood sugar levels, create sustainable eating habits, and enjoy a healthier, more balanced life with confidence.</p>            
             </div>
           </div><!-- End Service Item -->
 
@@ -595,6 +596,46 @@
           <img src="assets/img/gallery/g-4.webp" class="img-fluid" alt="Gallery Image 4">
         </div>
       </div>
+<div class="col">
+  <div class="gallery-item shadow-sm">
+    <img src="assets/img/gallery/g-5.webp" class="img-fluid" alt="Gallery Image 5">
+  </div>
+</div>
+<div class="col">
+  <div class="gallery-item shadow-sm">
+    <img src="assets/img/gallery/g-6.webp" class="img-fluid" alt="Gallery Image 6">
+  </div>
+</div>
+<div class="col">
+  <div class="gallery-item shadow-sm">
+    <img src="assets/img/gallery/g-7.webp" class="img-fluid" alt="Gallery Image 7">
+  </div>
+</div>
+<div class="col">
+  <div class="gallery-item shadow-sm">
+    <img src="assets/img/gallery/g-8.webp" class="img-fluid" alt="Gallery Image 8">
+  </div>
+</div>
+<div class="col">
+  <div class="gallery-item shadow-sm">
+    <img src="assets/img/gallery/g-9.webp" class="img-fluid" alt="Gallery Image 9">
+  </div>
+</div>
+<div class="col">
+  <div class="gallery-item shadow-sm">
+    <img src="assets/img/gallery/g-10.webp" class="img-fluid" alt="Gallery Image 10">
+  </div>
+</div>
+<div class="col">
+  <div class="gallery-item shadow-sm">
+    <img src="assets/img/gallery/g-11.webp" class="img-fluid" alt="Gallery Image 11">
+  </div>
+</div>
+<div class="col">
+  <div class="gallery-item shadow-sm">
+    <img src="assets/img/gallery/g-12.webp" class="img-fluid" alt="Gallery Image 12">
+  </div>
+</div>
 
       <!-- /Gallery Section -->
 
@@ -634,7 +675,7 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About us</a></li>
         <li><a href="index.html#services">Services</a></li>
-        <li><a href="tos-html">Terms of service</a></li>
+        <li><a href="tos.html">Terms of service</a></li>
         <!-- <li><a href="#">Privacy policy</a></li> -->
       </ul>
     </div>      
@@ -648,6 +689,7 @@
             <li><a href="women-n.html">Women Nutrition</a></li>
             <li><a href="elderly-n.html">Elderly Nutrition</a></li>                            
             <li><a href="lifestyle-mgmt.html">Lifestyle Management</a></li>
+            <li><a href="diabetes-mgmt.html">Diabetes Management</a></li>
       </ul>
     </div>
 
