--- a/about.html
+++ b/about.html
@@ -86,6 +86,7 @@
                 <li><a href="women-n.html">Women Nutrition</a></li>
                 <li><a href="elderly-n.html">Elderly Nutrition</a></li>                
                 <li><a href="lifestyle-mgmt.html">Lifestyle Management</a></li>
+                <li><a href="diabetes-mgmt.html">Diabetes Management</a></li>
               </ul>
             </li>
 
@@ -292,7 +293,7 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About us</a></li>
         <li><a href="index.html#services">Services</a></li>
-        <li><a href="tos-html">Terms of service</a></li>
+        <li><a href="tos.html">Terms of service</a></li>
         <!-- <li><a href="#">Privacy policy</a></li> -->
       </ul>
     </div>      
@@ -306,6 +307,7 @@
             <li><a href="women-n.html">Women Nutrition</a></li>
             <li><a href="elderly-n.html">Elderly Nutrition</a></li>                            
             <li><a href="lifestyle-mgmt.html">Lifestyle Management</a></li>
+            <li><a href="diabetes-mgmt.html">Diabetes Management</a></li>
       </ul>
     </div>
 
