Organised form location

--- a/lifestyle-mgmt.html
+++ b/lifestyle-mgmt.html
@@ -231,7 +231,7 @@
                       <!-- Action Buttons -->
                       <div class="flex flex-col md:flex-row space-y-4 md:space-y-0 md:space-x-4 w-full">
                           
-                          <a href="lifestyle-mgmt-form-ind.html" class="flex-grow btn-contact-2 bg-gray-200 text-gray-800 font-medium py-3 rounded-lg text-center transition-colors hover:bg-gray-300">Proceed</a>
+                          <a href="/forms/lifestyle-mgmt-form-ind.html" class="flex-grow btn-contact-2 bg-gray-200 text-gray-800 font-medium py-3 rounded-lg text-center transition-colors hover:bg-gray-300">Proceed</a>
                       </div>
                   </div>
               </div>
@@ -292,7 +292,7 @@
                       <!-- Action Buttons -->
                       <div class="flex flex-col md:flex-row space-y-4 md:space-y-0 md:space-x-4 w-full">
                           
-                          <a href="lifestyle-mgmt-form-www.html" class="flex-grow btn-contact-2 bg-gray-200 text-gray-800 font-medium py-3 rounded-lg text-center transition-colors hover:bg-gray-300">Proceed</a>
+                          <a href="/forms/lifestyle-mgmt-form-www.html" class="flex-grow btn-contact-2 bg-gray-200 text-gray-800 font-medium py-3 rounded-lg text-center transition-colors hover:bg-gray-300">Proceed</a>
                       </div>
                   </div>
               </div>
