--- a/forms/elderly-n-form-ind.html
+++ b/forms/elderly-n-form-ind.html
@@ -18,12 +18,9 @@
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         }
     </style>
-      <!-- =======================================================
-  * Updated: Aug 24 2025
-  * Author: www.cyberalliance.in
-  ======================================================== -->
 </head>
 <body>
+<div class="back-button-container"> <a href="/index.html" class="btn btn-primary">&larr; Back to Home</a> </div>
 
     <div class="container">
         <div class="form-container">
