--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width,  initial-scale=1.0" name="viewport">
   <title>DIETANCE</title>
-  <meta name="description" content="Not just Dieting living in Balance.">
+  <meta name="description" content="Not just Dieting. living in Balance.">
   <meta name="keywords" content="Deit, Guidance, Nutrition, Health, Wellness">
 
   <!-- Favicons -->
