Added umami, updated contact.html

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
         <!-- ======= NAVBAR END ======= -->
 
-        <a class="cta-btn d-none d-sm-block" href="contact.html">Make an Appointment</a>
+        <a class="cta-btn d-none d-sm-block" href="/forms/contact.html">Make an Appointment</a>
 
       </div>
 
@@ -720,7 +720,7 @@
   <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
 
-  <!-- Main JS File -->
+<script defer src="https://cloud.umami.is/script.js" data-website-id="20a8076d-e8a5-4224-9436-9e4d332198d6"></script>  <!-- Main JS File -->
   <script src="assets/js/main.js"></script>
 
 </body>
