--- a/forms/men-n-form-www.html
+++ b/forms/men-n-form-www.html
@@ -69,6 +69,6 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-
+    <script defer src="https://cloud.umami.is/script.js" data-website-id="20a8076d-e8a5-4224-9436-9e4d332198d6"></script>
 </body>
 </html>
