--- a/forms/contact.html
+++ b/forms/contact.html
@@ -24,8 +24,9 @@
 
     <div class="container">
         <div class="form-container">
-            <h2 class="text-center mb-4">Select Your Plan</h2>
-            <p class="text-center mb-4 text-muted">Please fill out the form below to let us know which plan you'd like to opt for. We'll get back to you shortly!</p>
+            <h2 class="text-center mb-4">Book an Appointment</h2>
+            <p class="text-center mb-4 text-muted">Not sure where to start?
+                <br>Please fill out the form below to let us know what's best for you</p>
             
             <form action="https://api.web3forms.com/submit" method="POST">
                 
