--- a/index.html
+++ b/index.html
@@ -669,6 +669,23 @@
 
   <!-- Scroll Top -->
   <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-leaf-fill"></i></a>
+  <script>
+  window.chatwootSettings = {"position":"right","type":"standard","launcherTitle":"Chat with us"};
+  (function(d,t) {
+    var BASE_URL="https://app.chatwoot.com";
+    var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
+    g.src=BASE_URL+"/packs/js/sdk.js";
+    g.async = true;
+    s.parentNode.insertBefore(g,s);
+    g.onload=function(){
+      window.chatwootSDK.run({
+        websiteToken: 'qFESqUAdAZrJYoDJCNTZ8GxN',
+        baseUrl: BASE_URL
+      })
+    }
+  })(document,"script");
+</script>
+
 
   <!-- Preloader -->
   <div id="preloader"></div>
