--- a/diabetes-mgmt.html
+++ b/diabetes-mgmt.html
@@ -97,7 +97,9 @@
             <li><a href="index.html#testimonials">Success Stories</a></li>
             
 
-            <li class="dropdown"><a href="https://blog.dietance.com/"><span>Blog</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+            <li><a href="https://blog.dietance.com">Blog</a></li>
+
+            <!-- <li class="dropdown"><a href="https://blog.dietance.com/"><span>Blog</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
               <ul>
                 <li><a href="#">Blog</a></li>
                 <li class="dropdown"><a href="#"><span>Recipes</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
@@ -107,7 +109,7 @@
                   </ul>
                 </li>              
               </ul>
-            </li>
+            </li>             -->
           </ul>
           <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
         </nav>
