--- a/index.html
+++ b/index.html
@@ -93,7 +93,9 @@
             <li><a href="index.html#testimonials">Success Stories</a></li>
             
 
-            <li class="dropdown"><a href="https://blog.dietance.com/"><span>Blog</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+            <li><a href="https://blog.dietance.com">Blog</a></li>
+
+            <!-- <li class="dropdown"><a href="https://blog.dietance.com/"><span>Blog</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
               <ul>
                 <li><a href="#">Blog</a></li>
                 <li class="dropdown"><a href="#"><span>Recipes</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
@@ -103,7 +105,7 @@
                   </ul>
                 </li>              
               </ul>
-            </li>
+            </li>             -->
           </ul>
           <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
         </nav>
@@ -669,6 +671,8 @@
 
   <!-- Scroll Top -->
   <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-leaf-fill"></i></a>
+
+  <!-- Chatwoot Live Chat Widget -->
   <script>
   window.chatwootSettings = {"position":"right","type":"standard","launcherTitle":"Chat with us"};
   (function(d,t) {
