Adding Phone link

--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
           
           <i class="bi bi-envelope d-flex align-items-center"><a href="mailto:info@dietance.com">info@dietance.com</a></i>
 
-          <i class="bi bi-phone d-flex align-items-center ms-4"><span>+91 80766 42570</span></i>
+          <i class="bi bi-phone d-flex align-items-center ms-4"><a href="tel:+918076642570">+91 80766 42570</a></i>
           
         </div>
 
