Changed color pallete

--- a/diabetes-mgmt.html
+++ b/diabetes-mgmt.html
@@ -180,7 +180,7 @@
               <!-- Indian Family Plan Card -->
               <div class="flex flex-col bg-white shadow-xl rounded-xl overflow-hidden w-full max-w-sm transition-transform duration-300 hover:scale-105">
                   <!-- Card Header -->
-                  <div class="bg-green-600 text-white p-6 font-bold text-center rounded-t-xl">
+                  <div class="bg-green-500 text-white p-6 font-bold text-center rounded-t-xl">
                       Indian Family
                   </div>
                   <!-- Card Body -->
@@ -241,7 +241,7 @@
               <!-- Global Family Plan Card -->
               <div class="flex flex-col bg-white shadow-xl rounded-xl overflow-hidden w-full max-w-sm transition-transform duration-300 hover:scale-105">
                   <!-- Card Header -->
-                  <div class="bg-purple-600 text-white p-6 font-bold text-center rounded-t-xl">
+                  <div class="bg-stone-400 text-white p-6 font-bold text-center rounded-t-xl">
                       Global Family
                   </div>
                   <!-- Card Body -->
