--- a/diabetes-mgmt.html
+++ b/diabetes-mgmt.html
@@ -80,10 +80,10 @@
 
             <nav id="navmenu" class="navmenu">
           <ul>
-            <li><a href="index.html" class="active">Home<br></a></li>
+            <li><a href="index.html">Home<br></a></li>
             <li><a href="about.html">About Us</a></li>
 
-            <li class="dropdown"><a href="index.html#services"><span>Services</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+            <li class="dropdown"><a href="index.html#services" class="active"><span>Services</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
               <ul>
                 <li><a href="kids-n.html">Kids Nutrition</a></li>
                 <li><a href="men-n.html">Men Nutrition</a></li>
