Added a success stories paage which fetches data from .md files

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
               </ul>
             </li>
 
-            <li><a href="index.html#testimonials">Success Stories</a></li>
+            <li><a href="stories.html">Success Stories</a></li>
             
 
             <li><a href="https://blog.dietance.com">Blog</a></li>
@@ -270,7 +270,7 @@
         <div class="row align-items-center">
 
           <div class="col-lg-5 info" data-aos="fade-up" data-aos-delay="100">
-            <h3>Success Stories</h3>
+            <h3><a href="stories.html">Success Stories</a></h3>
             <p>
               We love helping our clients achieve their health goals. Read how we've helped others transform their lives through personalised nutrition. Their success is our greatest motivation.
             </p>
