--- a/lifestyle-mgmt.html
+++ b/lifestyle-mgmt.html
@@ -94,7 +94,7 @@
               </ul>
             </li>
 
-            <li><a href="index.html#testimonials">Success Stories</a></li>
+            <li><a href="stories.html">Success Stories</a></li>
             
 
             <li><a href="https://blog.dietance.com">Blog</a></li>
