--- a/index.html
+++ b/index.html
@@ -737,7 +737,7 @@
     <div class="container copyright text-center mt-4">
       <p>© <span>Copyright</span> <strong class="px-1 sitename">Dietance</strong> <span>All Rights Reserved</span></p>
       <div class="credits">
-        Designed by <a href="https://cyberalliance.in/">Cyber Alliance India</a>
+        Designed by <a href="https://cyberalliance.in/" target="_blank">Cyber Alliance India</a>
       </div>
     </div>
 
