--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
 </div>
 <p>
 <i class="bi bi-quote quote-icon-left"></i>
-<span>My experience with Shubhangi Sharma is amezing. When I joined Breathe Well Being my hba1c was 9.6 and now within three months it has reduced to 5.8 75% of my medication is reduced too... I'm very thankful to my health coach Shubhangi Sharma mam And Fitness coach Akash Dev sir and Dr sneha mam for their proper guidance, they've guided me very well. Looking forward for my diabetes reversal
+<span>My experience with Shubhangi Sharma is amezing. When I joined Dietance my hba1c was 9.6 and now within three months it has reduced to 5.8 75% of my medication is reduced too... I'm very thankful to my health coach Shubhangi Sharma ma'am for her proper guidance, they've guided me very well. Looking forward for my diabetes reversal
 </span>
 <i class="bi bi-quote quote-icon-right"></i>
 </p>
