--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
             <li><a href="stories.html">Success Stories</a></li>
             
 
-            <li><a href="https://blog.dietance.com">Blog</a></li>
+            <li><a href="https://dietance.com/blog.html">Blog</a></li>
 
-            <!-- <li class="dropdown"><a href="https://blog.dietance.com/"><span>Blog</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+            <!-- <li class="dropdown"><a href="https://dietance.com/blog.html/"><span>Blog</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
               <ul>
                 <li><a href="#">Blog</a></li>
                 <li class="dropdown"><a href="#"><span>Recipes</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
