Update 3rd party links to open in new tab

--- a/about.html
+++ b/about.html
@@ -54,9 +54,9 @@
 
         <div class="social-links d-none d-md-flex align-items-center">
 
-          <a href="https://www.instagram.com/dietance.india" class="instagram"><i class="bi bi-instagram"></i></a>
-          <a href="https://www.facebook.com/dietance/" class="facebook"><i class="bi bi-facebook"></i></a>
-          <a href="https://medium.com/@dietance" class="medium"><i class="bi bi-medium"></i></a>
+          <a href="https://www.instagram.com/dietance.india" target="_blank" class="instagram"><i class="bi bi-instagram"></i></a>
+          <a href="https://www.facebook.com/dietance/" target="_blank" class="facebook"><i class="bi bi-facebook"></i></a>
+          
 
         </div>
       </div>
@@ -93,7 +93,7 @@
             <li><a href="stories.html">Success Stories</a></li>
             
 
-            <li><a href="https://dietance.com/blog.html">Blog</a></li>
+            <li><a href="blog.html">Blog</a></li>
 
             <!-- <li class="dropdown"><a href="https://dietance.com/blog.html/"><span>Blog</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
               <ul>
@@ -282,9 +282,9 @@
         <p><strong>Email:</strong> <span>info@dietance.com</span></p>
       </div>
       <div class="social-links d-flex mt-4">
-        <a href=""><i class="bi bi-facebook"></i></a>
-        <a href=""><i class="bi bi-instagram"></i></a>
-        <a href=""><i class="bi bi-medium"></i></a>
+        <a href="https://www.facebook.com/dietance/" target="_blank"><i class="bi bi-facebook"></i></a>
+        <a href="https://www.instagram.com/dietance.india/" target="_blank"><i class="bi bi-instagram"></i></a>
+        <a href="/blog"><i class="bi bi-file-text"></i></a>
       </div>
     </div>
 
