--- a/removed.html
+++ b/removed.html
@@ -232,8 +232,8 @@
                 As a cofounder of Dietance and a clinical dietitian, she's passionate about helping you hit your unique health goals. She's all about ditching the quick fixes and using personalised, evidence-based nutrition to build lasting habits that empower you to feel your best.
                 </p>
                 <div class="social">
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
+                  <a href="https://www.instagram.com/dietance.india/" target="_blank"><i class="bi bi-instagram"></i></a>
+                  <a href="https://www.facebook.com/dietance/" target="_blank"><i class="bi bi-facebook"></i></a>
                   <!-- <a href=""> <i class="bi bi-linkedin"></i> </a> -->
                 </div>
               </div>
