Forms updated for lighthouse score

--- a/forms/contact.html
+++ b/forms/contact.html
@@ -69,10 +69,10 @@
                         <input type="email" class="form-control" id="email" name="email" required placeholder="you@example.com">
                     </div>
                     
-                    <div class="mb-3">
-                        <label for="phone" class="form-label">Mobile Number</label>
-                        <input type="number" class="form-control" id="phone" name="mobile_number" required placeholder="e.g., 9876543210">
-                    </div>
+<div class="mb-3">
+    <label for="phone" class="form-label">Mobile Number</label>
+    <input type="tel" class="form-control" id="phone" name="mobile_number" required placeholder="e.g., +919876543210" pattern="^\+?[0-9]{10,15}$" title="Please enter a valid mobile number with optional country code">
+</div>
     
                     <div class="mb-3">
                         <label for="age" class="form-label">Age</label>
