--- a/about.html
+++ b/about.html
@@ -191,13 +191,13 @@
           </div>
 
           <div class="col-lg-6 content" data-aos="fade-up" data-aos-delay="100">
-            <h3>About Us</h3>
+            <h3>Meet our Founder</h3>
             <p>
-              We founded this company out of a deep passion for the healing power of food. Our goal is to guide and support you on your journey to a healthier lifestyle through balanced, personalised nutrition.<br>
-              <br>We've worked with over 2000 clients worldwide, using a clinical approach to improve lifestyle and manage related disorders like high cholesterol, diabetes, hypertension, thyroid issues, fatty liver, PCOD and more<br>
-              <br>We believe true transformation happens when we work together. By combining our clinical expertise with your unique goals, we create a personalised roadmap to success. 
-              Your journey is our priority, and we’re here to support you every step of the way with professional guidance and genuine care.<br>
-              <br>We are firmly against fad diets and starvation tactics. Instead, we promote sustainable habits rooted in traditional and local foods. We look forward to partnering with you to help you achieve your goals.
+              Welcome! I'm Shubhangi Sharma, A Certified Diet Consultant and I'm truly glad you're here. Beyond my credentials, I’m deeply passionate about helping individuals cultivate a healthier, more compassionate relationship with food and their bodies.
+              I understand how overwhelming the health and wellness journey can feel,The constant cycle of fad diets, conflicting advice, and the pressure to always "do more" can be disheartening.
+              That’s precisely why I created this space ”Dietance” - Not Just Dieting. Living in Balance: to offer a more balanced, sustainable, and empowering approach to nutrition. One where food becomes a source of nourishment and joy, not stress or guilt. One where your body is honored, not restricted.
+              My mission is to guide you away from rigid diet rules and toward a more intuitive, vibrant way of eating — one that supports your health goals while allowing you to enjoy the foods you love. Whether you're managing a specific health condition or simply striving for more energy and vitality in your daily life, I’m here to support you as a partner and trusted guide — much like a caring family member.
+              Together, let’s move beyond the noise of diet culture and create a life where you feel truly well — physically, mentally, and emotionally. I look forward to walking this journey with you.
           </div>
 
         </div>
