--- a/about.html
+++ b/about.html
@@ -198,6 +198,9 @@
               That’s precisely why I created this space ”Dietance” - Not Just Dieting. Living in Balance: to offer a more balanced, sustainable, and empowering approach to nutrition. One where food becomes a source of nourishment and joy, not stress or guilt. One where your body is honored, not restricted.
               My mission is to guide you away from rigid diet rules and toward a more intuitive, vibrant way of eating — one that supports your health goals while allowing you to enjoy the foods you love. Whether you're managing a specific health condition or simply striving for more energy and vitality in your daily life, I’m here to support you as a partner and trusted guide — much like a caring family member.
               Together, let’s move beyond the noise of diet culture and create a life where you feel truly well — physically, mentally, and emotionally. I look forward to walking this journey with you.
+              <br>Your Dietitian,<br>
+              <br>Shubhangi Sharma<br>
+              <br>M.Sc || B.Sc || CDE || IYCF<br>
           </div>
 
         </div>
